--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon Server/server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "ws": "^8.7.0"
   },
