--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "mysql2": "^3.12.0",
     "pg": "^8.13.1",
     "ws": "^8.7.0"
   },
