--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 DB_HOST=sql.freedb.tech
-DB_USER=freedb_abobus
-DB_PASSWORD=Vfb&mDMpc9n#@6B
-DB_NAME=freedb_multicraft
+DB_USER=freedb_server
+DB_PASSWORD=!8XD$RdS&v4g$4N
+DB_NAME=freedb_nikitka
