--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 DB_HOST=sql.freedb.tech
-DB_USER=freedb_server
+DB_USER=freedb_nikitka
 DB_PASSWORD=!8XD$RdS&v4g$4N
-DB_NAME=freedb_nikitka
+DB_NAME=freedb_server
