--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Server and client for Multicraft.",
   "main": "Server/server.js",
   "scripts": {
-    "start": "node Server/server.js",
+    "start": "node app/app.js",
     "dev": "nodemon Server/server.js"
   },
   "dependencies": {
